# Open3d_cpp_sample

./: CMakeLists.txt  Draw.cpp  ICP.cpp  README.md
data/: 000001.npz  convert2txt.py  next_frame.npy  nextf.txt  pos0.txt  pos1.txt  prev_frame.npy  prevf.txt
